--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,11 @@ jobs:
           mkdir -p build/${{ matrix.goos }}-${{ matrix.goarch }}
           GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o nginx-ad-auth-${{ matrix.goos }}-${{ matrix.goarch }}
 
+      - name: Attest release
+        uses: actions/attest-build-provenance@v1
+        with:
+           subject-path: 'nginx-ad-auth-${{ matrix.goos }}-${{ matrix.goarch }}'
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -52,6 +57,8 @@ jobs:
         - uses: actions/checkout@v4
         
         - name: Create Release with gh
+          env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: gh release create v${{ steps.getdate.outputs.getdate }} -t "Release ${{ steps.getdate.outputs.getdate }}" -n "Release ${{ steps.getdate.outputs.getdate }}"
 
         - uses: actions/download-artifact@v4
