--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,8 +10,9 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
   attestations: write
+  packages: write
 
 jobs:
   build:
