--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,5 +73,11 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: |
-            ls -lR
-            gh release upload v${{ steps.getdate.outputs.getdate }} *
+            mkdir -p release
+            mv darwin-amd64/* release/nginx-ad-auth-darwin-amd64
+            mv darwin-arm64/* release/nginx-ad-auth-darwin-arm64
+            mv linux-amd64/* release/nginx-ad-auth-linux-amd64
+            mv linux-arm64/* release/nginx-ad-auth-linux-arm64
+            mv windows-386/* release/nginx-ad-auth-windows-386.exe
+            mv windows-amd64/* release/nginx-ad-auth-windows-amd64.exe
+            gh release upload v${{ steps.getdate.outputs.getdate }} release/*
