--- a/helm/nginx-ad-auth/values.yaml
+++ b/helm/nginx-ad-auth/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 
 image:
-  repository: your-docker-registry/nginx-ad-auth
+  repository: sctg/nginx-ad-auth
   tag: latest
   pullPolicy: IfNotPresent
 
